fix: fix moves history overflow

--- a/src/main/resources/static/board/board.css
+++ b/src/main/resources/static/board/board.css
@@ -31,6 +31,7 @@ body {
     height: 100vh;
     border-left: 2px solid #150707;
     background-color: #c79a69;
+    overflow-y: auto;
 }
 
 #lobbySelectedContent {
@@ -141,6 +142,14 @@ input[type="text"] {
     font-weight: bold;
 }
 
+.movesHistorySpace {
+    overflow-y: scroll;
+    max-height: 350px;
+    border: 2px solid #940404;
+    background-color: #af7d54;
+    padding: 4px;
+}
+
 @keyframes fadeIn {
     from { opacity: 0; }
     to { opacity: 1; }
@@ -152,13 +161,14 @@ input[type="text"] {
     }
     #lobbyInfo {
         width: 100%;
-        height: 50vh;
+        height: 100vh;
         border-left: none;
         border-top: 2px solid #150707;
     }
     .flex-container {
         flex-direction: column;
     }
+
 }
 
 .notification-content {
@@ -219,3 +229,4 @@ input[type="text"] {
     from { opacity: 1; }
     to { opacity: 0; }
 }
+
